--- a/day3.css
+++ b/day3.css
@@ -9,7 +9,7 @@ background-position:center;
 nav
 {
     display: flex;
-    align-items: center;
+    align-items: cepnter;
     justify-content: space-between;
     padding-top: 45px;
     padding-left: 8%;
@@ -29,7 +29,7 @@ span
 nav ul li
 {
 list-style-type:none;
-display: inline-block;
+display: inlineblock;
 padding: 10px  25px;
 }
 nav ul li a
@@ -54,10 +54,11 @@ nav ul li a:hover
     padding: 10px  25px;
     border-radius: 30px;
     transition: transform .4s;
+
 }
 .btn:hover
 {
-    transform: scale(1.2);
+    transform: scale(4.2);
 }
 .content
 {
@@ -103,7 +104,6 @@ h4{
     border: 2px solid #f9004d;
     outline: none;
     border-radius: 30px;
-
 }
 .newslatter form input:last-child
 {
