--- a/day3.css
+++ b/day3.css
@@ -9,7 +9,7 @@ background-position:center;
 nav
 {
     display: flex;
-    align-items: cepnter;
+    align-items: baseline;
     justify-content: space-between;
     padding-top: 45px;
     padding-left: 8%;
@@ -28,14 +28,14 @@ span
 }
 nav ul li
 {
-list-style-type:none;
+list-style-type: none;
 display: inlineblock;
 padding: 10px  25px;
 }
 nav ul li a
 {
     color: white;
-    text-decoration: none;
+    text-decoration:solid;
     font-weight: bold;
     text-transform: capitalize;
 }
@@ -58,7 +58,7 @@ nav ul li a:hover
 }
 .btn:hover
 {
-    transform: scale(4.2);
+    transform: scale(1.2);
 }
 .content
 {
