--- a/day3.css
+++ b/day3.css
@@ -1,5 +1,6 @@
 .qwe
 {
+
 height: 800px;
 width: 100%;
 background-color: #097D76;
@@ -9,7 +10,7 @@ background-position:center;
 nav
 {
     display: flex;
-    align-items: baseline;
+    align-items: center;
     justify-content: space-between;
     padding-top: 45px;
     padding-left: 8%;
@@ -22,15 +23,15 @@ nav
     letter-spacing: 1px;
     cursor: pointer;
 }
-span
+span                                                                                
 {
-    color: #f9004d;
+    color:#00EAF9;
 }
 nav ul li
 {
 list-style-type: none;
-display: inlineblock;
-padding: 10px  25px;
+display: inline-block;
+padding: 5px  25px;
 }
 nav ul li a
 {
@@ -81,18 +82,18 @@ h3{
     margin-bottom: 50px;
 }
 h4{
-    color: #fcfc;
+    color: #FFCCFF;
     letter-spacing: 0px;
     font-size: 20px;
 }
 
-#coco
+.coco
 {
     color: 06f0ff;
 }
 .newslatter form
 {
-    width: 380px;
+    width: 250px;
     max-width: 100%;
     position: relative;
 }
@@ -100,7 +101,7 @@ h4{
 {
     display: inline-block;
     width: 100%;
-    padding: 14px 130px 14px 15px;
+    padding: 14px 100px 20px 15px;
     border: 2px solid #f9004d;
     outline: none;
     border-radius: 30px;
@@ -111,19 +112,19 @@ h4{
     display: inline-block;
     outline: none;
     border: none;
-    padding: 10px 30px;
+    padding: 13px 20px;
     border-radius: 10px;
     background-color: #f9004d;
     color: white;
-    box-shadow: 0px 0px 5px #000,0px 0px 15px #858585;
+   /** box-shadow: 0px 0px  #000,0px 0px 15px #858585;*/
     top: 6px;
-    right: 6px;
+    right: -80px;
 }
 
 #code
 {
     position:fixed;
-    margin-top: -300px;
+    margin-top: -280px;
     margin-bottom: 0px;
     margin-left: 700px;
     margin-right: 100px; 
@@ -135,6 +136,6 @@ h4{
     font-weight: bold;
     text-transform: capitalize;
     list-style-type: none;
-    display: inlineblock;
+    display: inline-block;
     padding: 10px  100px;
 }
